# aether

./: .claudeignore  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docker/: .env.example  docker-compose.govee2mqtt.yml
docs/superpowers/plans/: 2026-03-27-aether-mvp.md  2026-03-27-aether-phase2.md  2026-03-28-aether-phase3-core.md  2026-03-28-aether-phase3-peripherals.md  2026-03-28-aether-scenes.md
docs/superpowers/specs/: 2026-03-27-aether-design.md  2026-03-27-aether-phase2-design.md  2026-03-28-aether-phase3-core-design.md  2026-03-28-aether-phase3-peripherals-design.md  2026-03-28-aether-scenes-design.md
src/aether/: __init__.py  __main__.py  cli.py  config.py  mixer.py  state.py
src/aether/adapters/: govee.py  govee_segment.py  mqtt.py  openrgb.py
src/aether/alerts/: sentry.py
src/aether/lighting/: circadian.py  ramp.py  zones.py
src/aether/modes/: __init__.py  dj.py  focus.py  sleep.py
src/aether/scenes/: engine.py  interpolate.py
src/aether/vision/: camera.py  gestures.py  presence.py
src/aether/vox/: handler.py  intent.py  mic.py  stt.py  wake.py
systemd/: aether.service
tests/: test_circadian.py  test_config.py  test_config_phase2.py  test_config_phase3.py  test_dj.py  test_focus.py  test_gestures.py  test_govee_adapter.py  test_govee_segment.py  test_intent.py  test_mixer.py  test_openrgb_adapter.py  test_pause.py  test_presence.py  test_ramp.py  test_scene_engine.py  test_scene_interpolate.py  test_sleep.py  test_state.py  test_zones.py
